--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
+    "firebase": "^10.7.2",
     "latest": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-pdf": "^7.6.0",
