--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.7.2",
     "latest": "^0.2.0",
+    "otp-generator": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
